--- a/Coders_of_Delhi/Problem_Statement.ipynb
+++ b/Coders_of_Delhi/Problem_Statement.ipynb
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "1d1dd14c-e336-4356-acd5-19552bc2547a",
    "metadata": {},
    "outputs": [],
@@ -121,21 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "fd10d48c-2c72-40f5-bc91-4d8ca5bf5252",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Lets write a function to load the data\n",
-    "def load_data(filename):\n",
-    "    with open(filename, \"r\") as f:\n",
-    "        data = json.load(f)\n",
-    "    return data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "id": "c51e6703-9ce5-406e-908e-afb5f486dd52",
    "metadata": {},
    "outputs": [],
@@ -145,35 +131,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "id": "ea53a2e9-d29b-4f05-80a8-bc654f4ce992",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'users': [{'id': 1, 'name': 'Amit', 'friends': [2, 3], 'liked_pages': [101]},\n",
-       "  {'id': 2, 'name': 'Priya', 'friends': [1, 4], 'liked_pages': [102]},\n",
-       "  {'id': 3, 'name': 'Rahul', 'friends': [1], 'liked_pages': [101, 103]},\n",
-       "  {'id': 4, 'name': 'Sara', 'friends': [2], 'liked_pages': [104]}],\n",
-       " 'pages': [{'id': 101, 'name': 'Python Developers'},\n",
-       "  {'id': 102, 'name': 'Data Science Enthusiasts'},\n",
-       "  {'id': 103, 'name': 'AI & ML Community'},\n",
-       "  {'id': 104, 'name': 'Web Dev Hub'}]}"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "data"
+    "# Load the JSON file\n",
+    "def load_data(filename):\n",
+    "    with open(filename, \"r\") as file:\n",
+    "        data = json. load(file)\n",
+    "        return data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "id": "5b8c124f-b527-4509-9c6a-b57bc4504326",
    "metadata": {},
    "outputs": [
@@ -183,7 +155,7 @@
        "dict"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "9931cb21-397f-4531-80c2-49c549aa603c",
    "metadata": {},
    "outputs": [
@@ -228,21 +200,13 @@
     "     \n",
     "display_users(data)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ca083848-f78c-4493-b193-237eef639881",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:base] *",
+   "display_name": "aryanenv",
    "language": "python",
-   "name": "conda-base-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -254,7 +218,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.11"
   }
  },
  "nbformat": 4,
