--- a/Coders_of_Delhi/Data_cleaning.ipynb
+++ b/Coders_of_Delhi/Data_cleaning.ipynb
@@ -111,6 +111,7 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
    "id": "256c058c-0892-42de-9165-c15ef0f88b4d",
    "metadata": {
     "ExecuteTime": {
@@ -118,6 +119,15 @@
      "start_time": "2026-01-04T17:18:49.753100500Z"
     }
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data has been cleaned successfully\n"
+     ]
+    }
+   ],
    "source": [
     "import json\n",
     "\n",
@@ -145,35 +155,12 @@
     "data = clean_data(data)\n",
     "json.dump(data, open(\"cleaned_data2.json\", \"w\"), indent=4)\n",
     "print(\"Data has been cleaned successfully\")"
-   ],
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'data2.json'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mFileNotFoundError\u001B[0m                         Traceback (most recent call last)",
-      "Cell \u001B[1;32mIn[1], line 23\u001B[0m\n\u001B[0;32m     19\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m data\n\u001B[0;32m     22\u001B[0m \u001B[38;5;66;03m# Load the data\u001B[39;00m\n\u001B[1;32m---> 23\u001B[0m data \u001B[38;5;241m=\u001B[39m json\u001B[38;5;241m.\u001B[39mload(\u001B[38;5;28;43mopen\u001B[39;49m\u001B[43m(\u001B[49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43mdata2.json\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m)\u001B[49m)\n\u001B[0;32m     24\u001B[0m data \u001B[38;5;241m=\u001B[39m clean_data(data)\n\u001B[0;32m     25\u001B[0m json\u001B[38;5;241m.\u001B[39mdump(data, \u001B[38;5;28mopen\u001B[39m(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mcleaned_data2.json\u001B[39m\u001B[38;5;124m\"\u001B[39m, \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mw\u001B[39m\u001B[38;5;124m\"\u001B[39m), indent\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m4\u001B[39m)\n",
-      "File \u001B[1;32m~\\PycharmProjects\\JupyterProject\\.venv\\lib\\site-packages\\IPython\\core\\interactiveshell.py:324\u001B[0m, in \u001B[0;36m_modified_open\u001B[1;34m(file, *args, **kwargs)\u001B[0m\n\u001B[0;32m    317\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m file \u001B[38;5;129;01min\u001B[39;00m {\u001B[38;5;241m0\u001B[39m, \u001B[38;5;241m1\u001B[39m, \u001B[38;5;241m2\u001B[39m}:\n\u001B[0;32m    318\u001B[0m     \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mValueError\u001B[39;00m(\n\u001B[0;32m    319\u001B[0m         \u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mIPython won\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mt let you open fd=\u001B[39m\u001B[38;5;132;01m{\u001B[39;00mfile\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m by default \u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[0;32m    320\u001B[0m         \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mas it is likely to crash IPython. If you know what you are doing, \u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[0;32m    321\u001B[0m         \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124myou can use builtins\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m open.\u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[0;32m    322\u001B[0m     )\n\u001B[1;32m--> 324\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m io_open(file, \u001B[38;5;241m*\u001B[39margs, \u001B[38;5;241m*\u001B[39m\u001B[38;5;241m*\u001B[39mkwargs)\n",
-      "\u001B[1;31mFileNotFoundError\u001B[0m: [Errno 2] No such file or directory: 'data2.json'"
-     ]
-    }
-   ],
-   "execution_count": 1
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "42632bae-b039-4548-99a2-12ec327ad7b7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "aryanenv",
    "language": "python",
    "name": "python3"
   },
@@ -187,7 +174,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.11"
   }
  },
  "nbformat": 4,
