--- a/Coders_of_Delhi/People_you_may_know.ipynb
+++ b/Coders_of_Delhi/People_you_may_know.ipynb
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "id": "543f2704-447d-469e-95ee-5240949a3696",
    "metadata": {},
    "outputs": [
@@ -137,9 +137,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:base] *",
+   "display_name": "aryanenv",
    "language": "python",
-   "name": "conda-base-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -151,7 +151,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.11"
   }
  },
  "nbformat": 4,
